<resources>
    <string name="app_name" translatable="false">StoryApp</string>
    <string name="welcome_login">Welcome back! Glad to see you, Again!</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="have_an_account">Don’t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="login">Login</string>
    <string name="welcome_register">Hello! Register to get started</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="register">Register</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="change_language">Language</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location" />
</resources>